Remove cap on Java version used by forbidden APIs
There was a check in the forbidden APIs plugin to cap the Java version
at 14, presumably from ages ago when the plugin did not support Java 15
or newer. That means we have not been enforcing any Java deprecations in
the past 5 years. This removes that check, updates the plugin to 3.9,
and fixes all the resulting deprecation failures.

Signed-off-by: Andrew Ross <andrross@amazon.com>